tests/paczka1/small_fuzzy/33450688.err
Error in line 6: A3 A127 18,0
Error in line 7: A3 A126 88,7
Error in line 9: A3 A127 19,4
Error in line 11: A3 A127 63,4
Error in line 3: AmCSI93 A3 63,7
Error in line 14: A3 A807 70,8
Error in line 10: Nu46 A126 75,3
